# eltrinity

./: .gitattributes  .gitmodules  README.md  RunnerActivity.java
.github/workflows/: android.yml
beanshell-samples/floating/: main.bsh
beanshell-samples/legacy_floating_window/: basic_info.json  main.bsh
beanshell-samples/opengles/shaders/cube/: fragment_shader.frag
beanshell-samples/opengles_surface_view/: basic_info.json  main.bsh
beanshell-samples/opengles_window/: basic_info.json  main.bsh
beanshell-samples/opengles_window/shaders/cube/: vertex_shader.vert
docs/: API.md  BASIC_INFO.md  ENVIRONMENT.md  MAIN.md  PROJECT.md
libs/beanshell-v2.1.1/: AndroidManifest.xml  classes.dex
libs/libgdx/: classes.dex  config
runner_activity_example/: RunnerActivity.java  runner.xml
samples/floating/: main.bsh
samples/opengles/: main.bsh
src/: build.gradle.kts  main.bsh  settings.gradle.kts
src/app/: CMakeLists.txt  build.gradle.kts
src/app/src/main/: AndroidManifest.xml
src/app/src/main/c/: c2bsh_main.c  config.h.in  converter.c  converter.h  file_util.c  file_util.h  log.c  log.h  str_util.c  str_util.h
src/c2bsh/: CMakeLists.txt  build.gradle.kts  compile_run.sh
src/c2bsh/src/main/c/: c2bsh_main.c  config.h
src/c2bsh/src/main/c/converter/: converter.c  converter.h
src/c2bsh/src/main/c/string/: str_util.c
src/c2bsh/src/main/java/dev/trindadedev/c2bsh/: C2BSH.java  C2BSH.kt  C2BSHExt.kt  C2BSHResult.kt
src/common/: CMakeLists.txt  build.gradle.kts
src/common/src/main/c/: config.h.in
src/event/: Event.java  Events.java
src/gdx/: LauncherActivity.java  ThreeDimensionsScreen.java
src/gradle/: libs.versions.toml
src/opengl/: BSHGLRenderer.java  BSHGLSurfaceView.java  BaseObject.java  Cube.java
src/opengl/objects/: BaseObject.java  Circle.java  Cube.java  Triangle.java
src/program/: Program.java  ProgramAPI.java  ProgramInterpreter.java
src/util/: FileUtil.java
(+80 files in other folders)
